--- a/index.html
+++ b/index.html
@@ -1,21 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <script src="script.js"></script>
+
     <title>Document</title>
 </head>
-<body>
-    <div class="container">
-        <div class="timerDisplay">00 : 00 : 00 : 000</div>
 
-    <div class="button">
+<body>
+<section>
+    <div id="chronos">
+        <div class="timerDisplay">00 : 00 : 00 : 000</div>
         <button id="startTimer">Start</button>
         <button id="pauseTimer">Pause</button>
         <button id="resetTimer">Reset</button>
+        <button id="loopTimer">tour</button>
     </div>
-</div>
+    <p></p>
+    <button id="chronometre">chrono</button>
+</section>
+
+<section class="clock">
+    <div id="horloge">
+    </div>
+    <button id="clock">horloge</button>
+</section>
+
+<section class="alert">
+    <div id="alarme">
+        <input type="time" id="timer" value="00:00:00">
+        <button id="alarm">alarm</button>
+    </div>
+    <button id="alert">alarme</button>
+</section>
+
+<section>
+    <div id="minuteur">
+        <div class="timerCountDown">00 : 00 : 000</div>
+        <div class="container">
+        <button id="startCountDown">Start</button>
+        <button id="pauseCountDown">Pause</button>
+        <button id="resetCountDown">Reset</button>
+   </div>
+  
+        <label>minute</label>
+        <input type="number"  name="minute" min="00" max="59">
+        <label>seconde</label>
+        <input type="number"  name="second" min="00" max="59">
+ 
+        <button id="setCountdown" value="">
+            parametre minuteur
+        </button>
+    </div>
+    <button id="countDown">minuteur</button>
+</section>
 </body>
+
 </html>
