correction d'un affichage plus ergonomique

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
    </div>
   
         <label>minute</label>
-        <input type="number"  name="minute" min="00" max="59">
+        <input type="number"  name="minute"value='00' min="00" max="59">
         <label>seconde</label>
-        <input type="number"  name="second" min="00" max="59">
+        <input type="number"  name="second" value="00" min="00" max="59">
  
         <button id="setCountdown" value="">
             parametre minuteur
